trafficyaml/motivation_optimal/service-d-to-service-e-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-d-to-service-e-vs
  namespace: paper2
spec:
  hosts:
  - service-e
  http:
  - match:
    - sourceLabels:
        app: service-d
        version: service-d1
    route:
    - destination:
        host: service-e
        subset: service-e1        
      weight: 100   

  - match:
    - sourceLabels:
        app: service-d
        version: service-d4
    route:
    - destination:
        host: service-e
        subset: service-e1
      weight: 34      
    - destination:
        host: service-e
        subset: service-e2
      weight: 66              


  - match:
    - sourceLabels:
        app: service-d
        version: service-d2
    route:
    - destination:
        host: service-e
        subset: service-e2
      weight: 67
    - destination:
        host: service-e
        subset: service-e3
      weight: 33


  - match:
    - sourceLabels:
        app: service-d
        version: service-d3
    route:
    - destination:
        host: service-e
        subset: service-e3
      weight: 100
